--- a/index.html
+++ b/index.html
@@ -43,6 +43,6 @@
     <footer>
       <p>Сюда бы я вписал информацию об авторе и ссылки на другие сайты</p>
     </footer>
-    <!-- сюда можно подключить jquery <script src="scripts/app.js" defer></script> -->
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
   </body>
 </html>
