--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Заголовок страницы</title>
+    <title>Mi-Shop WEB</title>
     <link rel="stylesheet" href="style.css">
 
-    <meta property="og:title" content="Заголовок страницы в OG">
-    <meta property="og:description" content="Описание страницы в OG">
+    <meta property="og:title" content="Mi-Shop WEB">
+    <meta property="og:description" content="Приложение магазина Mi-Shop">
     <meta property="og:image" content="https://example.com/image.jpg">
     <meta property="og:url" content="https://example.com/">
   </head>
   <body>
     <header>
-      <h1>Личный сайт</h1>
+      <h1>Mi-Shop</h1>
       <p>Который сделан на основе готового шаблона</p>
       <nav>
         <ul>
