--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <header>
       <h1>Mi-Shop</h1>
-      <p>Который сделан на основе готового шаблона</p>
+      <p>Текст который находится в header</p>
       <nav>
         <ul>
           <li><a href="index.html">Эта страница</a></li>
@@ -25,23 +25,23 @@
     <main>
       <article>
         <section>
-          <h2>Первая секция</h2>
-          <p>Она обо мне</p>
-          <img src="images/image.png" alt="Человек и пароход">
-          <p>Но может быть и о семантике, я пока не решил.</p>
+          <h2>Секция 1 в  MAIN</h2>
+          <p>Тут что-то основное</p>
+          <img src="images/image.png" alt="Я">
+          <p>Картинка описывает моё состояние по жизни</p>
         </section>
         <section>
-          <h2>Вторая секция</h2>
-          <p>Она тоже обо мне</p>
+          <h2>Секция 2 в  MAIN</h2>
+          <p>Тут что-то еще должно быть</p>
         </section>
         <section>
-          <h2>И третья</h2>
-          <p>Вы уже должны были начать догадываться.</p>
+          <h2>Секция 3 в  MAIN</h2>
+          <p>Еще что-то только хз</p>
         </section>
       </article>
     </main>
     <footer>
-      <p>Сюда бы я вписал информацию об авторе и ссылки на другие сайты</p>
+      <p>Опа а тут низ FOOTER</p>
     </footer>
     
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
