--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <section>
           <h2>Секция 1 в  MAIN</h2>
           <p>Тут что-то основное</p>
-          <img src="images/image.png" alt="Я">
+          <img src="https://www.murcat.ru/mem/db/admin/foto/1604410358.jpg" alt="Я">
           <p>Картинка описывает моё состояние по жизни</p>
         </section>
         <section>
