--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <section>
           <h2>Секция 1 в  MAIN</h2>
           <p>Тут что-то основное</p>
-          <img src="https://www.murcat.ru/mem/db/admin/foto/1604410358.jpg" alt="Я">
+          <img src="https://www.murcat.ru/mem/db/admin/foto/1604410358.jpg" alt="Я" style= "border-radius: 8px; margin-left: auto; margin-right: auto; width: 50%;">
           <p>Картинка описывает моё состояние по жизни</p>
         </section>
         <section>
