--- a/index.html
+++ b/index.html
@@ -11,14 +11,13 @@
     <meta property="og:image" content="https://example.com/image.jpg">
     <meta property="og:url" content="https://example.com/">
   </head>
-  <body id="body-pd">
-    <header>
+    <body id="body-pd">
         <div class="l-navbar" id="navbar">
             <nav class="nav">
                 <div>
                     <div class="nav__brand">
                         <ion-icon name="menu-outline" class="nav__toggle" id="nav-toggle"></ion-icon>
-                        <a href="#" class="nav__logo">Mi-Shop</a>
+                        <a href="#" class="nav__logo">Hi, CodeCreative</a>
                     </div>
 
                     <div class="nav__list">
@@ -58,15 +57,6 @@
 
         <!-- <h1>Sidebar Menu</h1> -->
         <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
-    </header>
-    <main>
-      <article>
-      
-    </main>
-    <footer>
-      <p>Опа а тут низ FOOTER</p>
-    </footer>
-    
-    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+        <script src="https://telegram.org/js/telegram-web-app.js"></script>
   </body>
 </html>
