--- a/index.html
+++ b/index.html
@@ -56,6 +56,31 @@
         </div>
 
         <!-- <h1>Sidebar Menu</h1> -->
+      <header>
+      <h1>Тестовая страница</h1>
+      <p>В режиме теста</p>
+    </header>
+    <main>
+      <article>
+        <section>
+          <h2>Первая секция</h2>
+          <p>Тут пример изображения</p>
+          <img src="https://www.pravilamag.ru/upload/img_cache/e5a/e5a582538319f19cb8cfef8ff6d0f310_ce_640x427x0x140_cropped_510x340.webp" alt="Это я)">
+          <p>Я если честно заебался</p>
+        </section>
+        <section>
+          <h2>Вторая секция</h2>
+          <p>Тут пример товара</p>
+        </section>
+        <section>
+          <h2>Треться секция</h2>
+          <p>Тут пока еще не придумал</p>
+        </section>
+      </article>
+    </main>
+    <footer>
+      <p>Конец сайта, днище так скажем</p>
+    </footer>
         <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
         <script src="https://telegram.org/js/telegram-web-app.js"></script>
   </body>
