--- a/index.html
+++ b/index.html
@@ -17,40 +17,40 @@
                 <div>
                     <div class="nav__brand">
                         <ion-icon name="menu-outline" class="nav__toggle" id="nav-toggle"></ion-icon>
-                        <a href="#" class="nav__logo">Hi, CodeCreative</a>
+                        <a href="#" class="nav__logo">Привет, Пользователь</a>
                     </div>
 
                     <div class="nav__list">
                         <a href="#" class="nav__link active">
                             <ion-icon name="home-outline" class="nav__icon"></ion-icon>
-                            <span class="nav__name">Dashboard</span>
+                            <span class="nav__name">Добавление товара</span>
                         </a>
                         <a href="#" class="nav__link">
                             <ion-icon name="chatbubbles-outline" class="nav__icon"></ion-icon>
-                            <span class="nav__name">Messenger</span>
+                            <span class="nav__name">Просмотр ремонтов</span>
                         </a>
                         <a href="#" class="nav__link">
                             <ion-icon name="folder-outline" class="nav__icon"></ion-icon>
-                            <span class="nav__name">Projects</span>
+                            <span class="nav__name">Что-то еще</span>
                         </a>
                         <a href="#" class="nav__link">
                             <ion-icon name="pie-chart-outline" class="nav__icon"></ion-icon>
-                            <span class="nav__name">Analytics</span>
+                            <span class="nav__name">Что-то еще</span>
                         </a>
                         <a href="#" class="nav__link">
                             <ion-icon name="people-outline" class="nav__icon"></ion-icon>
-                            <span class="nav__name">Team</span>
+                            <span class="nav__name">Что-еще</span>
                         </a>
                         <a href="#" class="nav__link">
                             <ion-icon name="settings-outline" class="nav__icon"></ion-icon>
-                            <span class="nav__name">Settings</span>
+                            <span class="nav__name">Настройки</span>
                         </a>
                     </div>
                 </div>
 
                 <a href="#" class="nav__link">
                     <ion-icon name="log-out-outline" class="nav__icon"></ion-icon>
-                    <span class="nav__name">Log Out</span>
+                    <span class="nav__name">Выйти</span>
                 </a>
             </nav>
         </div>
