--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
         </div>
 
         <!-- <h1>Sidebar Menu</h1> -->
-      <header>
+      <header id="header" class="header">
       <h1>Тестовая страница</h1>
       <p>В режиме теста</p>
     </header>
-    <main>
+    <main id="main-content" class="main-content">
       <article>
         <section>
           <h2>Первая секция</h2>
@@ -78,7 +78,7 @@
         </section>
       </article>
     </main>
-    <footer>
+    <footer  id="footer" class="footer">
       <p>Конец сайта, днище так скажем</p>
     </footer>
         <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
