--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
                     <div class="nav__list">
                         <a href="#" class="nav__link active">
                             <ion-icon name="home-outline" class="nav__icon"></ion-icon>
-                            <span class="nav__name">Добавление товара</span>
+                            <span class="nav__name">Главная</span>
                         </a>
                         <a href="#" class="nav__link">
                             <ion-icon name="chatbubbles-outline" class="nav__icon"></ion-icon>
-                            <span class="nav__name">Просмотр ремонтов</span>
+                            <span class="nav__name">Что-то еще</span>
                         </a>
                         <a href="#" class="nav__link">
                             <ion-icon name="folder-outline" class="nav__icon"></ion-icon>
@@ -39,7 +39,7 @@
                         </a>
                         <a href="#" class="nav__link">
                             <ion-icon name="people-outline" class="nav__icon"></ion-icon>
-                            <span class="nav__name">Что-еще</span>
+                            <span class="nav__name">Что-то еще</span>
                         </a>
                         <a href="#" class="nav__link">
                             <ion-icon name="settings-outline" class="nav__icon"></ion-icon>
