--- a/index.html
+++ b/index.html
@@ -26,20 +26,20 @@
                             <span class="nav__name">Главная</span>
                         </a>
                         <a href="#" class="nav__link">
-                            <ion-icon name="chatbubbles-outline" class="nav__icon"></ion-icon>
-                            <span class="nav__name">Что-то еще</span>
+                            <ion-icon name="bag-outline" class="nav__icon"></ion-icon>
+                            <span class="nav__name">Все ремонты</span>
                         </a>
                         <a href="#" class="nav__link">
-                            <ion-icon name="folder-outline" class="nav__icon"></ion-icon>
-                            <span class="nav__name">Что-то еще</span>
+                            <ion-icon name="bag-add-outline" class="nav__icon"></ion-icon>
+                            <span class="nav__name">Добавить</span>
                         </a>
                         <a href="#" class="nav__link">
-                            <ion-icon name="pie-chart-outline" class="nav__icon"></ion-icon>
-                            <span class="nav__name">Что-то еще</span>
+                            <ion-icon name="bag-check-outline" class="nav__icon"></ion-icon>
+                            <span class="nav__name">Готовые</span>
                         </a>
                         <a href="#" class="nav__link">
-                            <ion-icon name="people-outline" class="nav__icon"></ion-icon>
-                            <span class="nav__name">Что-то еще</span>
+                            <ion-icon name="bag-handle-outline" class="nav__icon"></ion-icon>
+                            <span class="nav__name">Дополнение</span>
                         </a>
                         <a href="#" class="nav__link">
                             <ion-icon name="settings-outline" class="nav__icon"></ion-icon>
