--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
     <footer  id="footer" class="footer">
       <p>Конец сайта, днище так скажем</p>
     </footer>
-        <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
-        <script src="https://telegram.org/js/telegram-web-app.js"></script>
+      <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+      <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+      <script src="https://telegram.org/js/telegram-web-app.js"></script>
   </body>
 </html>
