--- a/index.html
+++ b/index.html
@@ -65,8 +65,10 @@
         <section>
           <h2>Первая секция</h2>
           <p>Тут пример изображения</p>
-          <img src="https://www.pravilamag.ru/upload/img_cache/e5a/e5a582538319f19cb8cfef8ff6d0f310_ce_640x427x0x140_cropped_510x340.webp" alt="Это я)">
-          <p>Я если честно заебался</p>
+          <div class="product">
+            <img src="https://www.pravilamag.ru/upload/img_cache/e5a/e5a582538319f19cb8cfef8ff6d0f310_ce_640x427x0x140_cropped_510x340.webp" alt="Это я)">
+            <p>Я если честно заебался</p>
+          </div>
         </section>
         <section>
           <h2>Вторая секция</h2>
