--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <section>
           <h2>Первая секция</h2>
           <p>Тут пример изображения</p>
-          <div class="product">
+          <div style="border-radius: .5rem; margin-left: auto;margin-right: auto; width: 50%;">
             <img src="https://www.pravilamag.ru/upload/img_cache/e5a/e5a582538319f19cb8cfef8ff6d0f310_ce_640x427x0x140_cropped_510x340.webp" alt="Это я)">
             <p>Я если честно заебался</p>
           </div>
