--- a/index.html
+++ b/index.html
@@ -108,12 +108,16 @@
         </section>
       </article>
     </main>
-    <footer  id="footer" class="footer">
-      <p>Конец сайта, днище так скажем</p>
+    <footer  id="footer">
+      <div class="footer">&copy;<span id="currentYear"> </span><span> Mi-Shop WEB. All rights reserved.</span></div>
     </footer>
       <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
       <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
       <script src="https://telegram.org/js/telegram-web-app.js"></script>
       <script src="script-tg.js" defer></script>
+      <script>
+        const currentYear = new Date().getFullYear();
+        document.getElementById('currentYear').textContent = currentYear;
+      </script>
   </body>
 </html>
