--- a/404.html
+++ b/404.html
@@ -1,5 +1,16 @@
-<link href="https://fonts.googleapis.com/css?family=Inconsolata&display=swap" rel="stylesheet">
-
+<!DOCTYPE html>
+<html lang="ru">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mi-Shop WEB</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
+    <meta property="og:title" content="Mi-Shop WEB">
+    <meta property="og:description" content="Приложение магазина Mi-Shop">
+    <meta property="og:image" content="https://example.com/image.jpg">
+    <meta property="og:url" content="https://example.com/">
+</head>
 <body>
   <div class="container">
     <div class="row">
@@ -10,3 +21,4 @@
     </div>
   </div>
 </body>
+</html>
