--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <div>
                     <div class="nav__brand">
                         <ion-icon name="menu-outline" class="nav__toggle" id="nav-toggle"></ion-icon>
-                        <a href="#" class="nav__logo" id="name_user">Привет, User</a>
+                        <a href="./ff" class="nav__logo" id="name_user">Привет, User</a>
                     </div>
 
                     <div class="nav__list">
