--- a/404.html
+++ b/404.html
@@ -19,7 +19,7 @@
     </center>
     </div>
   </div>
-
+<a href="./index.html">Домой</a>
 <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </body>
 </html>
