--- a/404.html
+++ b/404.html
@@ -19,7 +19,9 @@
     </center>
     </div>
   </div>
-<a href="./index.html">Домой</a>
+  <div class="backhome">
+    <a href="./index.html">Домой</a>
+  </div>
 <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </body>
 </html>
