--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <script src="script.js" defer></script>
     <meta property="og:title" content="Mi-Shop WEB">
     <meta property="og:description" content="Приложение магазина Mi-Shop">
-    <meta property="og:image" content="https://example.com/image.jpg">
-    <meta property="og:url" content="https://example.com/">
+    <meta property="og:image" content="./icons/mainicon.png">
+    <meta property="og:url" content="https://delfown.github.io/">
   </head>
     <body id="body-pd">
         <div class="l-navbar" id="navbar">
