--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <li class="product-wrapper">
                 <a href="#" class="product">
                     <div class="product-photo">
-                        <img src="https://cdn2.goloskarpat.info/images/doc/a/3/a3c555e-kak-vybrat-pylesos.jpg" alt="">
+                        <img src="./icons/air_purifier_gnjae0p2s3my.svg" alt="">
                     </div>
                     <p>Какой-то текст, еще текст и еще текст</p>
                 </a>
